--- a/recipes/poachedeggs.html
+++ b/recipes/poachedeggs.html
@@ -8,5 +8,19 @@
 </head>
 <body>
     <h1> Poached Eggs </h1>
+        <img src="./img/egg.jpg"> 
+    <h2> Ingredients (unordered) </h2>
+        <ul> 
+            4 organic eggs
+             2 teaspoons white vinagar 
+             salt
+             ground black pepper to taste 
+             1 pinch dried dill, or to taste 
+        </ul>
+    <h3> Steps (ordered) </h3>
+        <ol>
+            
+
+        </ol>
 </body>
 </html>
