--- a/recipes/poachedeggs.html
+++ b/recipes/poachedeggs.html
@@ -7,20 +7,31 @@
     <title>Document</title>
 </head>
 <body>
+    
     <h1> Poached Eggs </h1>
-        <img src="./img/egg.jpg"> 
+        <img src="../images/eggs.jpg"/> 
     <h2> Ingredients (unordered) </h2>
         <ul> 
-            4 organic eggs
-             2 teaspoons white vinagar 
-             salt
-             ground black pepper to taste 
-             1 pinch dried dill, or to taste 
+            <li> 4 organic eggs </li>
+            <li> 2 teaspoons white vinegar </li>
+            <li> salt </li>
+            <li> ground black pepper to taste </li>
+            <li> 1 pinch dried dill, or to taste  </li>
         </ul>
-    <h3> Steps (ordered) </h3>
+    <h2> Steps (ordered) </h2>
         <ol>
-            
-
+            <h3> Step: 1 </h3>
+                <li>Fill a large saucepan with 2 to 3 inches of water and bring to a simmer. </li>
+                    Reduce the heat to medium-low, pour in vinegar, and the water at a gentle simmer. </li>
+            <h3> Step: 2 </h3>
+                <li>Crack an egg into a small cup.
+                    Place cup near the surface of the hot water and gently drop egg into the water. </li>
+                    Repeat with remaining eggs. </li>
+                    Turn off heat, cover, and let sit until whites are set, 4 minutes.
+                    Lift eggs out of pan with a slotted spoon. 
+                    Season with salt, pepper, and dill. </li>
         </ol>
+<p> </p>
+<a href="../index.html"> Odin Recipes</a>
 </body>
 </html>
