--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 <h1> Odin Recipes </h1>
-    <a href="./recipes/poachedeggs.html"> click me </a>
-
-</body>
+    <ul> 
+        <li><a href="./recipes/poachedeggs.html"> <h2> <strong> Poached Eggs </strong> </h2> </a> </li> 
+        <p> <img src="./images/eggs.jpg"/> </p>
+        <li><a href="./recipes/roastedcasserole.html"> <h2> <strong> Roasted Zucchini Casserole </strong> </h2> </a> </li>
+        <p> <img src="./images/casserole.jpg"/> </p>
+        <li><a href="./recipes/bakedsalmon.html"> <h2> <strong> Baked Salmon </strong> </h2> </a> </li>
+        <p> <img src="./images/salmon.jpg"/> </p>
+    </ul>
+    </body>
 </html>
