--- a/recipes/roastedcasserole.html
+++ b/recipes/roastedcasserole.html
@@ -23,7 +23,7 @@
 <h2> Steps (ordered) </h2>
     <ol>
         <h3> Step: 1 </h3>
-            <li>FPreheat oven to 400 degrees F (200 degrees C).
+            <li>Preheat oven to 400 degrees F (200 degrees C).
         <h3> Step: 2 </h3>
             <li> Toss zucchinis and onions in a large bowl with olive oil until evenly coated. Spread vegetables into a large baking dish. </li>
         <h3>Step: 3</h3>
