--- a/recipes/bakedsalmon.html
+++ b/recipes/bakedsalmon.html
@@ -15,7 +15,7 @@
             <li> 1 serving cooking spray </li>
             <li> One 2 pound salmon fillet </li>
             <li> 2 tablespoons mayonnaise </li>
-            <li> 2 tablespoons seafood seasing (such as Old Bay) </li>
+            <li> 2 tablespoons seafood seasing (such as Old Bay®) </li>
         </ul>
     <h2> Steps (ordered) </h2>
         <ol>
